// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`serializeSettings snapshots > matches minimal settings snapshot 1`] = `
{
  "contact": {
    "description": undefined,
    "emails": [],
    "leads": {
      "left": undefined,
      "right": undefined,
    },
    "location": undefined,
    "phones": [],
    "socialLinks": [],
    "subtitle": undefined,
    "title": "Get In Touch",
  },
  "coreSkills": [],
  "hero": {
    "descriptionHtml": undefined,
    "greeting": "Untitled Profile",
    "highlights": [],
    "primaryButton": undefined,
    "secondaryButton": undefined,
    "subtitle": undefined,
  },
  "highlights": [],
  "languages": [],
  "profile": {
    "fullName": "Untitled Profile",
    "location": undefined,
    "title": undefined,
  },
  "seo": {
    "description": "Untitled Profile",
    "keywords": [],
    "metadataBase": undefined,
    "openGraphImage": undefined,
    "siteUrl": undefined,
    "title": "Untitled Profile",
    "titleTemplate": undefined,
    "twitterHandle": undefined,
  },
  "socialLinks": [],
  "theme": {
    "accent": "#ffd600",
    "description": "High-contrast dark theme tuned for dashboards and hero copy.",
    "id": "professional-dark",
    "name": "Professional Dark",
    "previewGradient": "linear-gradient(135deg, #14171f 0%, #0f1118 65%, #272b38 100%)",
    "tags": [
      "dark",
      "professional",
      "default",
    ],
    "version": "1.0.0",
  },
}
`;

exports[`serializeSettings snapshots > matches seeded settings snapshot 1`] = `
{
  "contact": {
    "description": "Explore the portfolio and get in touch.",
    "emails": [],
    "leads": {
      "left": undefined,
      "right": undefined,
    },
    "location": "",
    "phones": [],
    "socialLinks": [],
    "subtitle": "Software Engineer",
    "title": "Get In Touch",
  },
  "coreSkills": [
    "Next.js",
    "PostgreSQL",
    "TypeScript",
    "Docker",
  ],
  "hero": {
    "descriptionHtml": "<ul><li>Next.js App Router portfolio platform</li><li>Admin CMS with Prisma-backed persistence</li><li>Typed services, repositories, and serializers</li></ul>",
    "greeting": "Welcome",
    "highlights": [
      "Next.js App Router portfolio platform",
      "Admin CMS with Prisma-backed persistence",
      "Typed services, repositories, and serializers",
    ],
    "primaryButton": {
      "href": "#contact",
      "text": "Contact",
    },
    "secondaryButton": {
      "href": "/portfolio",
      "text": "View Portfolio",
    },
    "subtitle": "Software Engineer",
  },
  "highlights": [
    "Next.js App Router portfolio platform",
    "Admin CMS with Prisma-backed persistence",
    "Typed services, repositories, and serializers",
  ],
  "languages": [
    "English",
  ],
  "profile": {
    "fullName": "Portfolio Owner",
    "location": "",
    "title": "Software Engineer",
  },
  "seo": {
    "description": "Portfolio website powered by Next.js, TypeScript, Prisma, and an admin CMS.",
    "keywords": [
      "portfolio",
      "software engineer",
      "next.js",
      "typescript",
    ],
    "metadataBase": "http://localhost:3000/",
    "openGraphImage": undefined,
    "siteUrl": "http://localhost:3000/",
    "title": "Portfolio Owner",
    "titleTemplate": "%s | Portfolio",
    "twitterHandle": undefined,
  },
  "socialLinks": [],
  "theme": {
    "accent": "#ffd600",
    "description": "High-contrast dark theme tuned for dashboards and hero copy.",
    "id": "professional-dark",
    "name": "Professional Dark",
    "previewGradient": "linear-gradient(135deg, #14171f 0%, #0f1118 65%, #272b38 100%)",
    "tags": [
      "dark",
      "professional",
      "default",
    ],
    "version": "1.0.0",
  },
}
`;
